# augmented-codebase-indexer

./: .env  .env.example  .gitignore  AGENTS.md  Dockerfile  ISSUES_VERIFICATION_REPORT.md  README.md  SECURITY.md  mcp-config.docker.example.json  mcp-config.example.json  measure_mcp_search.py  pyproject.toml  test_mcp_server.py
.aci/: index.db
.diagnoses/: code-review.md  spec-diagnosis.md
.github/workflows/: release.yml  test-mcp.yml  test.yml
.kiro/specs/codebase-semantic-search/: design.md
.kiro/specs/semantic-code-intelligence/: .config.kiro  design.md  requirements.md  tasks.md
doc/: CHUNKING_ALGORITHM.zh-CN.md  README.zh-CN.md
docker/qdrant/: docker-compose.yaml
docs/: cli-usage.md  installation.md  mcp-integration.md  security.md
scripts/: start-http.ps1  start-http.sh  start-mcp.ps1  start-mcp.sh  start-repl.ps1  start-repl.sh
src/aci/: __init__.py  __main__.py  http_server.py  mcp_server.py
src/aci/cli/: __init__.py  handlers.py  history.py  parser.py  router.py  services.py  ui.py
src/aci/core/: __init__.py  ast_parser.py  chunker.py  comment_extractor.py  config.py  debouncer.py  defaults.yaml  docstring_formatter.py  file_events.py  file_scanner.py  gitignore_manager.py  graph_models.py  graph_store.py  languages.yaml  path_utils.py  qdrant_launcher.py  setup_check.py  summary_artifact.py  summary_generator.py  symlink_validator.py  tokenizer.py  watch_config.py
src/aci/infrastructure/: __init__.py  codebase_registry.py  embedding_client.py  fakes.py  file_watcher.py  grep_searcher.py  metadata_queries.py  metadata_schema.py  metadata_store.py  vector_store.py  vector_store_base.py  vector_store_qdrant.py
src/aci/mcp/: __init__.py  context.py  handlers.py  services.py  tools.py
src/aci/services/: __init__.py  container.py  context_assembler.py  evaluation_service.py  graph_builder.py  indexing_models.py  indexing_service.py  indexing_worker.py  llm_enricher.py  metrics_collector.py  pagerank_scorer.py  query_router.py  repository_resolver.py  reranker.py  rrf_fuser.py  search_service.py  (+4 more)
tests/: __init__.py  chunker_property_utils.py  mcp_path_security_strategies.py  path_utils_strategies.py  search_service_test_utils.py  test_artifact_type_filtering_properties.py  test_ast_parser.py  test_ast_parser_cpp_properties.py  test_ast_parser_go.py  test_ast_parser_javascript.py  test_ast_parser_jsdoc.py  test_ast_parser_python.py  test_chunker.py  test_chunker_core.py  test_chunker_docstrings.py  test_chunker_properties.py  test_chunker_properties_limits_metadata.py  test_chunker_properties_line_bounds.py  test_chunker_splitter.py  test_cli.py  test_cli_search_mode_properties.py  test_codebase_registry.py  test_comment_extraction.py  test_comment_extractor.py  test_comment_extractor_properties.py  test_config_properties.py  test_docstring_formatter_properties.py  test_embedding_client_properties.py  test_evaluation_service_properties.py  test_file_scanner_properties.py  test_gitignore_error_handling.py  test_gitignore_pattern_properties.py  test_http_server_independence_properties.py  test_indexing_defects_fix_properties.py  test_indexing_service_properties.py  test_indexing_summary_properties.py  test_mcp_handler_context_properties.py  test_mcp_index_concurrency.py  test_mcp_path_security_denylist.py  test_mcp_path_security_errors.py  (+31 more)
tests/fixtures/: __init__.py  complex_go.go  complex_javascript.js  complex_python.py
tests/integration/: test_repl_integration.py  test_summary_generator_chunker_integration.py
tests/property/: __init__.py  test_ast_parser_go.py  test_ast_parser_javascript.py  test_ast_parser_jsdoc_properties.py  test_ast_parser_python.py  test_chunker_properties_limits_metadata.py  test_chunker_properties_line_bounds.py  test_cli_search_mode_properties.py  test_comment_extractor_properties.py  test_config_properties.py  test_debouncer_properties.py  test_embedding_client_properties.py  test_file_scanner_properties.py  test_gitignore_pattern_properties.py  test_graph_store_export_import_properties.py  test_history_properties.py  test_http_server_independence_properties.py  test_indexing_defects_fix_properties.py  test_indexing_service_properties.py  test_mcp_context_properties.py  test_mcp_handler_context_properties.py  test_mcp_path_security_errors.py  test_mcp_path_security_validation.py  test_mcp_server_independence_properties.py  test_metadata_store_properties.py  test_observability_metrics_properties.py  test_path_utils_cli_properties.py  test_path_utils_validation_properties.py  test_repl_enhancements_properties.py  test_search_defects_fix_properties.py  test_search_service_artifact_type_properties.py  test_search_service_properties_vector.py  test_search_service_summary_mode_properties.py  test_service_container_properties.py  test_summary_artifact_properties.py  test_summary_generator_class_properties.py  test_summary_generator_file_properties.py  test_summary_generator_function_properties.py  test_vector_store_collection_properties.py  test_vector_store_defects_fix_properties.py  (+3 more)
tests/support/: __init__.py  mcp_path_security_strategies.py  search_service_test_utils.py
tests/test_mcp_call/: run_all.py  test_index_codebase.py  test_mcp_client.py  test_stdio.py
tests/unit/: test_aci_library.py  test_ast_parser.py  test_ast_parser_fixtures.py  test_ast_parser_jsdoc.py  test_chunker_core.py  test_chunker_splitter.py  test_cli.py  test_comment_extraction.py  test_context_assembler.py  test_docstring_formatter.py  test_gitignore_hierarchy_matching.py  test_graph_aware_search.py  test_graph_builder.py  test_graph_store.py  test_indexing_service_process_pool_context.py  test_llm_enricher.py  test_mcp_graph_handlers.py  test_mcp_index_codebase_workers.py  test_mcp_server.py  test_pagerank_scorer.py  test_qdrant_launcher.py  test_query_router.py  test_reference_extractors.py  test_reranker_api_parsing.py  test_rrf_fuser.py  test_runtime_path_resolution.py  test_text_search.py  test_tokenizer.py  test_topology_analyzer.py
(+113 files in other folders)
