[project]
name = "aci"
version = "0.1.0"
description = "Augmented Codebase Indexer - Semantic code search with precise line-level location results"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "ACI Team" }
]
keywords = ["code-search", "semantic-search", "ast", "embeddings", "qdrant"]

dependencies = [
    "tree-sitter>=0.21.0",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-javascript>=0.21.0",
    "qdrant-client>=1.7.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "tiktoken>=0.5.0",
    "pathspec>=0.11.0",
    "tree-sitter-go>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "hypothesis>=6.92.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]
rerank = [
    "sentence-transformers>=2.2.0",
]

[project.scripts]
aci = "aci.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aci"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
